--- a/index.html
+++ b/index.html
@@ -2,11 +2,44 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <!-- meta tags for Internet Explorer and mobile devices -->
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- meta tags data for good SEO -->
+    <title>Page Title</title>
+    <meta name="description" content="A look into the history of symbolism, the evolution of logos, and brand attachment.">
+    <meta name="keywords" content="logos, symbolism, branding, psychology, language, advertisement">
+
+    <!-- your stylesheet and any other styling code, e.g. google fonts -->
+    <link href="" rel="stylesheet">  
+    <link rel="stylesheet" href="css/layout.css">  
+
 </head>
 <body>
+        <ul>
+            <li>
+                <a href="#">Section A</a>
+            </li>
+            <li>
+                <a href="#">Section B</a>
+            </li>
+            <li>
+                <a href="#">Section C</a>
+            </li>
+            <li>
+                <a href="#">Section D</a>
+            </li>
+        </ul>
+    </nav>
+
+    <header class="page-header">
+        <div class="header-content">
+            <h1>Project Title</h1>
+            <p>Subtitle of the Project</p>
+        </div>
+    </header>
     
 </body>
 </html>
